trunk/Archive2/a5/012043f29f790c/output
main.cpp:8:1: error: expected unqualified-id before '?' token
 ?????? get_foo_ptr(T v) {
 ^
main.cpp: In function 'int main()':
main.cpp:14:34: error: 'get_foo_ptr' was not declared in this scope
     std::cout <<  get_foo_ptr('c'); //print address of function that was just called
                                  ^
